# simple-doc-viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_ko.md  install-context-menu.js  launcher.js  package-lock.json  package.json  server.js
client/: index.html  style.css
client/app/: api.js  content.js  csv-parser.js  csv-table.js  doc-zoom.js  dragdrop.js  find.js  helpers.js  highlight.js  main.js  manifest.json  markdown.js  media-zoom.js  mermaid-loader.js  navigation.js  print.js  search-wiring.js  search.js  shortcuts.js  state.js  tabs.js  tree.js  ui.js  ui2.js
docs/: dev-journal.md  prd.md
docs/plans/: 2026-02-22-simple-doc-viewer-design.md  2026-02-22-simple-doc-viewer-plan.md  2026-02-26-context-menu-design.md  2026-02-26-context-menu-plan.md  2026-04-13-search-enhancement.md  20260416_plan_native-app-migration_TARS.md  20260417_guide_pwa-install_TARS.md  20260612_plan_sdv-refactoring-native-migration_TARS.md  20260629_plan_sdv-upgrade-4features_TARS.md  20260629_plan_sdv-upgrade-implementation_TARS.md
public/: manifest.json  sw.js
reference/: doc-explorer.html  markdown-test.md  markdown-viewer.html  mermaid-test.md  sdv-showcase.md  test-video.webm
scripts/: build-tauri-frontend.js
scripts/dev/: extract-client.js  test-csv.js  test-markdown.js
scripts/launcher/: install-shortcut.bat  (+2 more)
server/: config.js  mermaid-download.js  pick-folder.ps1  respond.js  state.js  util.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
(+26 files in other folders)
