[package]
name = "sdv"
version = "0.80.1"
description = "SDV — Simple Doc Viewer (Tauri native edition)"
authors = ["Gonnector"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
